<resources>
    <string name="app_name">每日笑话</string>
    <string name="error">轻触屏幕重新加载</string>
    <string name="no_data">暂无数据</string>
    <string name="loading">正在加载中…</string>
    <string name="load_fail_retry">加载失败，点击重新加载</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_welfare">福利</string>
    <string name="da_mei">大胸妹</string>
    <string name="xiao_qing_xin">小清新</string>
    <string name="wen_yi">文艺</string>
    <string name="xing_gan">性感</string>
    <string name="da_chang_tui">大长腿</string>
    <string name="hei_si">黑丝</string>
    <string name="xiao_qiao_tun">小翘臀</string>
    <string name="sui_ji">随机</string>

    <string name="quit">再按一次退出程序</string>
    <string name="error_quit">很抱歉，程序出现错误，即将退出…</string>
    <string name="joke_text">段子</string>
    <string name="video">视频</string>
    <string name="joke_pic">趣图</string>
    <string name="qiu_tu">糗图</string>
    <string name="save_image">保存图片</string>
    <string name="sd_no_exist">SD卡不可用</string>
    <string name="file_no_exist_save_fail">文件不存在，保存失败</string>
    <string name="save_success">保存成功</string>
    <string name="save_fail">保存失败</string>
    <string name="today_fortune">今日运势</string>
    <string name="composite_index">综合指数</string>
    <string name="health_index">健康指数</string>
    <string name="love_index">爱情指数</string>
    <string name="lucky_color">幸运颜色</string>
    <string name="work_index">工作指数</string>
    <string name="lucky_num">幸运数字</string>
    <string name="wealth_index">财运指数</string>
    <string name="match_friends">速配Q友</string>
    <string name="system">系统</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="your_constellation">你的星座：</string>
    <string name="clear_cache">清理缓存(%sM)</string>
    <string name="feedback">反馈</string>
    <string name="clear_cache_error">清理过程出现异常</string>
    <string name="clear_done">清理完成</string>
    <string name="title_feedback">建议反馈</string>
    <string name="hint_input_feedback">请输入您的反馈意见</string>
    <string name="hint_input_contact">请留下您的联系方式(如QQ),方便我联系您!</string>
    <string name="hint_upload_log">上传程序错误日志,帮助我改进吧。</string>
    <string name="send">发送</string>
    <string name="thanks_to_feedback">提交成功,感谢您的建议!</string>
    <string name="about_me">关于我:\n
        \n\t\t一个喜欢看狗血韩剧、科幻美剧、清新日剧的码农。\n
        \t\t如果您喜欢这个应用或者喜欢我，您可以通过长按上图支付宝二维码保存，打开支付宝扫一扫图片，给我打赏吧。(*^__^*)\n
        \n\t\tGithub:https://github.com/helengray \n
        \n\t\tCSDN:http://blog.csdn.net/it_talk \n
        \n\t\t微博:划虎烂1990 \n</string>
    <string name="share_soft">分享软件</string>
    <string name="open_source">开放源代码许可</string>
    <string name="check_update">检测更新</string>
    <string name="new_version">最新版本</string>
    <string name="v">V%s</string>
    <string name="no_new_version">当前已是最新版本</string>
    <string name="new_version_download">新版本下载</string>
    <string name="alert">提示</string>
    <string name="update">更新</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="ignore">忽略</string>
    <string name="zhi_fu_bao">支付宝二维码</string>
    <string name="pic_save">图片已保存</string>
    <string name="more_share">更多分享</string>
    <string name="not_find_share_soft">没有找到分享软件</string>
    <string name="share_tip">愿你每一天都快快乐乐，每天看到你的笑容是我最大的幸福！快来下载吧！http://helengray.github.io/</string>
    <string name="open_source_content">
        \n
        ------------------\n
        每日笑话\n
        ------------------\n
        https://github.com/helengray/DayJoke\n\n
        ------------------\n
        Fresco \t0.10.0\n
        ------------------\n
        https://github.com/facebook/fresco\n\n
        ------------------\n
        RxJava \t1.1.0\n
        ------------------\n
        https://github.com/ReactiveX/RxJava\n
        https://github.com/ReactiveX/RxAndroid\n\n
        ------------------\n
        retrofit \t2.0.1\n
        ------------------\n
        https://github.com/square/retrofit\n\n
        ------------------\n
        RippleEffect \t1.3\n
        ------------------\n
        https://github.com/traex/RippleEffect\n\n
        ------------------\n
        material-spinner \t1.0.6\n
        ------------------\n
        https://github.com/jaredrummler/Material-Spinner\n\n
        ------------------\n
        Bomb\n
        ------------------\n
        http://www.bmob.cn\n\n

    </string>

</resources>
