<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/et_feedback_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        style="@style/TitleStyle"
        android:background="@drawable/border"
        android:lines="4"
        android:hint="@string/hint_input_feedback"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/et_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="2"
        android:background="@drawable/border"
        android:layout_marginTop="10dp"
        style="@style/TitleStyle"
        android:hint="@string/hint_input_contact"
        />
    <CheckBox
        android:id="@+id/cb_upload_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/hint_upload_log"
        style="@style/SubheadStyle"
        />
    <com.andexert.library.RippleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RippleViewStyle"
        >
    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/TitleStyle.Light"
        android:background="@drawable/bg_btn"
        android:text="@string/send"/>
    </com.andexert.library.RippleView>
</LinearLayout>