<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <include
        layout="@layout/cons_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/Grey_100"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/today_fortune"
        android:textAppearance="@style/CaptionStyle.Light"
        />

    <TextView
        android:id="@+id/text_cons_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/CaptionStyle.Light"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/composite_index"/>
        <RatingBar
            android:id="@+id/rating_composite_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:isIndicator="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:numStars="5"
            android:stepSize="0.5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/health_index"/>
        <TextView
            android:id="@+id/text_health_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/love_index"/>
        <RatingBar
            android:id="@+id/rating_love_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:isIndicator="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:numStars="5"
            android:stepSize="0.5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/lucky_color"/>
        <TextView
            android:id="@+id/text_lucky_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/work_index"/>
        <RatingBar
            android:id="@+id/rating_work_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:isIndicator="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:numStars="5"
            android:stepSize="0.5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/lucky_num"/>
        <TextView
            android:id="@+id/text_lucky_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/wealth_index"/>
        <RatingBar
            android:id="@+id/rating_wealth_index"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:isIndicator="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:numStars="5"
            android:stepSize="0.5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:text="@string/match_friends"/>
        <TextView
            android:id="@+id/text_match_friends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/CaptionStyle.Light"
            android:layout_marginLeft="10dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/Grey_100"/>
</LinearLayout>
