<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        >

        <TextView
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableTop="@drawable/icon_logo"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            />

        <TextView
            android:id="@+id/text_current_version"
            style="@style/SubheadStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="V1.0.0"
            />

        <ImageView
            android:id="@+id/iv_zhifubao"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/icon_zhifubao"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/border"
            android:padding="5dp"
            android:text="@string/about_me"
            />

        <com.helen.dayjoke.ui.view.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RippleViewStyle"
            >

            <LinearLayout
                android:id="@+id/layout_check_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/press_selector"
                android:gravity="center_vertical"
                android:minHeight="@dimen/min_height"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    style="@style/SubheadStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/icon_update"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:text="@string/check_update"
                    />

                <TextView
                    android:id="@+id/text_new_version"
                    style="@style/CaptionStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/new_version"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </com.helen.dayjoke.ui.view.RippleView>

        <View style="@style/LineStyle"/>

        <com.helen.dayjoke.ui.view.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RippleViewStyle"
            >

            <LinearLayout
                android:id="@+id/layout_open_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/press_selector"
                android:gravity="center_vertical"
                android:minHeight="@dimen/min_height"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    style="@style/SubheadStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_open_source"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:text="@string/open_source"
                    />
            </LinearLayout>
        </com.helen.dayjoke.ui.view.RippleView>

        <View style="@style/LineStyle"/>

        <com.helen.dayjoke.ui.view.RippleView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/RippleViewStyle"
            >

            <LinearLayout
                android:id="@+id/layout_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/press_selector"
                android:gravity="center_vertical"
                android:minHeight="@dimen/min_height"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    style="@style/SubheadStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/icon_share"
                    android:drawablePadding="10dp"
                    android:gravity="center|left"
                    android:text="@string/share_soft"
                    />
            </LinearLayout>
        </com.helen.dayjoke.ui.view.RippleView>
    </LinearLayout>
</ScrollView>